cmake_minimum_required(VERSION 4.1)
project(2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(2026 main.cpp
        0101_1.cpp
        0101_2.cpp
        0101_3.cpp
        0101_4.cpp
        0101_5.cpp
        0101_6.cpp
        0101_7.cpp
        01018.cpp
        0101_19.cpp
        0101_20.cpp
        0101_21.cpp
        0101_22.cpp
        0102_1.cpp
        0102_2.cpp
        0102_3.cpp
        0102_4.cpp
        0102_5.cpp
        0102_6.cpp
        0102_7.cpp
        0102_8.cpp
        0102_9.cpp
        0102_10.cpp
        0102_11.cpp
        0102_12.cpp
        0103_1.cpp
        0103_2.cpp
        0103_3.cpp
        0103_4.cpp
        0103_5.cpp
        0103_6.cpp
        0103_7.cpp
        0103_8.cpp
        0103_9.cpp
        0103_10.cpp
        0103_11.cpp
        0103_12.cpp
        0103_13.cpp
        0103_14.cpp
        0104_1.cpp
        0104_2.cpp
        0104_3.cpp
        0104_4.cpp
        0104_5.cpp
        0104_6.cpp
        0104_7.cpp
        0105_1.cpp
        0105_2.cpp
        0105_3.cpp
        0105_4.cpp
        0106_1.cpp
        0106_2.cpp
        0106_3.cpp
        0106_4.cpp
        0106_5.cpp
        0106_6.cpp
        0106_7.cpp
        0106_8.cpp
        0107_1.cpp
        0108_1.cpp
        0108_2.cpp
        0108_3.cpp
        0108_4.cpp
        0108_5.cpp
        0109_1.cpp
        0109_2.cpp
        0109_3.cpp
        0109_4.cpp
        0109_5.cpp
        0109_6.cpp
        0109_7.cpp
        0109_8.cpp
        0110_1.cpp
        0110_2.cpp
        0110_3.cpp
        0110_4.cpp
        0110_5.cpp
        0110_6.cpp
        0110_7.cpp
        0110_8.cpp
        0110_9.cpp
        0110_10.cpp
        0110_11.cpp
        0110_12.cpp
        0110_13.cpp
        0110_14.cpp
        0110_15.cpp
        0110_16.cpp
        0110_17.cpp
        0110_18.cpp
        0110_19.cpp
        0110_20.cpp
        0110_21.cpp
        0110_22.cpp
        0110_23.cpp
        0110_24.cpp
        0110_25.cpp
        0110_26.cpp
        0110_27.cpp
        0110_28.cpp
        0110_29.cpp
        0110_30.cpp
        0110_31.cpp
        0110_32.cpp
        0110_33.cpp
        0110_34.cpp
        0110_35.cpp
        0110_36.cpp
        0110_37.cpp
        0110_38.cpp
        0111_1.cpp
        0112_1.cpp
        0112_2.cpp
        0112_3.cpp
        0112_4.cpp
        0112_5.cpp
        0112_6.cpp
        0112_7.cpp
        0112_8.cpp
        0112_9.cpp
        0112_10.cpp
        0112_11.cpp
        0112_12.cpp
        0112_13.cpp
        0112_14.cpp
        0112_15.cpp
        0112_16.cpp
        0112_17.cpp
        0112_18.cpp
        0112_19.cpp
        0112_20.cpp
        0112_21.cpp
        0112_22.cpp
        0112_23.cpp
        0112_24.cpp
        0112_25.cpp
        0112_26.cpp
        0113_1.cpp
        0113_2.cpp
        0113_3.cpp
        0113_4.cpp
        0113_5.cpp
        0113_6.cpp
        0113_7.cpp
        0113_8.cpp
        0113_9.cpp
        0113_10.cpp
        0113_11.cpp
        0113_12.cpp
        0114_1.cpp
        0114_2.cpp
        0114_3.cpp
        0114_4.cpp
        0114_5.cpp
        0114_6.cpp
        0114_7.cpp
        0114_8.cpp
        0114_9.cpp
        0114_10.cpp
        0114_11.cpp
        0114_12.cpp
        0114_13.cpp
        0114_14.cpp
        0114_15.cpp
        0115_1.cpp
        0115_2.cpp
        0115_3.cpp
        0115_4.cpp
        0115_5.cpp
        0115_6.cpp
        0115_7.cpp
        0115_8.cpp
        0116_1.cpp
        0116_2.cpp
        0116_3.cpp
        0116_4.cpp
        0116_5.cpp
        0117_1.cpp
        0117_2.cpp
        0117_3.cpp
        0117_4.cpp
        0117_5.cpp
        0117_6.cpp
        0117_7.cpp
        0117_8.cpp
        0118_1.cpp
        0118_2.cpp
        0118_3.cpp
        0118_4.cpp
        0118_5.cpp
        0118_6.cpp
        0118_7.cpp
        0118_8.cpp
        0118_9.cpp
        0119_1.cpp
        0119_2.cpp
        0119_3.cpp
        0119_4.cpp
        0119_5.cpp
        0119_6.cpp
        0119_7.cpp
        0119_8.cpp
        0120_1.cpp
        0120_2.cpp
        0120_3.cpp
        0120_4.cpp
        0120_5.cpp
        0120_6.cpp
        0120_7.cpp
        0120_8.cpp
        0120_9.cpp
        0120_10.cpp
        0120_11.cpp
        0120_12.cpp
        0120_13.cpp
        0120_14.cpp
        0120_15.cpp
        0121_1.cpp
        0121_2.cpp
        0121_3.cpp
        0121_4.cpp
        0121_5.cpp
        0121_6.cpp
        0121_7.cpp
        0121_8.cpp
        0121_9.cpp
        0121_10.cpp
        0121_11.cpp
        0122_1.cpp
        0122_2.cpp
        0122_3.cpp
        0122_4.cpp
        0122_5.cpp
        0122_6.cpp
        0122_7.cpp
        0122_8.cpp
        0122_9.cpp
        0122_10.cpp
        0124_1.cpp
        0124_2.cpp
        0124_3.cpp
        0124_4.cpp
        0124_5.cpp
        0124_6.cpp
        0124_7.cpp
        0124_8.cpp
        0124_9.cpp
        0124_10.cpp
        0124_11.cpp
        0124_12.cpp
        0125_1.cpp
        0125_2.cpp
        0125_3.cpp
        0125_4.cpp
        0125_5.cpp
        0125_6.cpp
        0125_7.cpp
        0125_8.cpp
        0125_9.cpp
        0125_10.cpp
        0125_11.cpp
        0126_1.cpp
        0126_2.cpp
        0126_3.cpp
        0126_4.cpp
        0126_5.cpp
        0126_6.cpp
        0126_7.cpp)
